Update to byacc 20140715 (only concerns regression tests being fixed) Directly use regression test from upstream

PR:		191020
Submitted by:	gcooper (yaneurabeya@gmail.com)