contrib/byacc/package/mingw-byacc.spec
@@ -1,8 +1,8 @@
 Summary: byacc - public domain Berkeley LALR Yacc parser generator
 %define AppProgram byacc
-%define AppVersion 20140422
+%define AppVersion 20140715
 %define UseProgram yacc
-# $XTermId: mingw-byacc.spec,v 1.3 2014/04/22 08:13:20 tom Exp $
+# $XTermId: mingw-byacc.spec,v 1.4 2014/07/15 19:36:54 tom Exp $
 Name: %{AppProgram}
 Version: %{AppVersion}
 Release: 1
